Revert "fix(sbb-mini-calendar): improve spacing (#4105)"
This reverts commit c93a69ed639e77ca2c4fdaffd6649c754a3eafc0.

--- a/src/elements/mini-calendar/mini-calendar/mini-calendar.scss
+++ b/src/elements/mini-calendar/mini-calendar/mini-calendar.scss
@@ -4,7 +4,5 @@
 @include sbb.box-sizing;
 
 :host {
-  display: flex;
-  flex-wrap: wrap;
-  gap: var(--sbb-spacing-fixed-2x) var(--sbb-spacing-fixed-1x);
+  display: block;
 }
